ugur baba nan degerleri cozdu

--- a/for boston/mynotes.ipynb
+++ b/for boston/mynotes.ipynb
@@ -492,26 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficients: [0.0,0.0,0.0245647506965403,-0.012914726019572406,4.362355589750677,-4.8898708907980994,3.217023171264629,0.0,-0.9582330563709076,0.013382324469965576,0.0,-0.6329575374202584,0.011968932575021532,-0.6423275046331799]\n",
-      "Intercept: 24.01471908057247\n"
+      "Coefficients: [0.0,0.0,0.008396048424079296,0.0,4.364700758728272,-6.746971472344359,3.7396391717867425,0.0,-0.7302888212641605,0.0,-0.00041205412964661557,-0.44883123632561955,0.009553390978154705,-0.6153811039460064]\n",
+      "Intercept: 17.959375026562267\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "pyspark.sql.column.Column"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
